remember bootstrap man

--- a/.github/workflows/install-framework.yml
+++ b/.github/workflows/install-framework.yml
@@ -27,4 +27,5 @@ jobs:
       - name: Test install
         run: |
           cd test
+          /opt/vcpkg/bootstrap-vcpkg.sh
           /opt/vcpkg/vcpkg --triplet ${{ matrix.triplet }} install
