--- a/.github/workflows/install-framework.yml
+++ b/.github/workflows/install-framework.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           cd test
           ls
+          exit -1
           /opt/vcpkg/bootstrap-vcpkg.sh
           /opt/vcpkg/vcpkg --triplet ${{ matrix.triplet }} install
 
