--- a/.github/workflows/install-framework.yml
+++ b/.github/workflows/install-framework.yml
@@ -17,22 +17,24 @@ jobs:
   build:
     name: 'build and install'
     runs-on: ubuntu-22.04
-    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-09328eb
+    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-f8ab815
     strategy:
       fail-fast: false
       matrix:
-        triplet: [x64-linux-gcc, x64-linux-clang, arm64-linux] # x64-linux-gcc-dynamic, x64-linux-clang-dynamic
+        triplet: [x64-linux-gcc, x64-linux-clang, arm64-linux, x64-linux-gcc-dynamic, x64-linux-clang-dynamic]
     steps:
       - uses: actions/checkout@v3
-      - name: Update vcpkg
-        run: |
-          cd /opt/vcpkg
-          git pull
-      - name: Test install
-        run: |
-          cd test
-          /opt/vcpkg/bootstrap-vcpkg.sh
-          /opt/vcpkg/vcpkg --triplet ${{ matrix.triplet }} install
+
+      - uses: lukka/get-cmake@latest
+      - name: Install tfc-framework with vcpkg
+        uses: lukka/run-vcpkg@v11
+        env:
+          VCPKG_DEFAULT_TRIPLET: ${{ matrix.triplet }}
+        with:
+          runVcpkgInstall: true
+          vcpkgDirectory: '/opt/vcpkg'
+          vcpkgGitCommitId: 'be2d7f886aad895e282b59088a2dfca5f6e1c88a'
+          vcpkgJsonGlob: 'test/vcpkg.json'
 
       - name: Upload vcpkg log
         if: failure()
