--- a/.github/workflows/install-framework.yml
+++ b/.github/workflows/install-framework.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: 'build and install'
     runs-on: ubuntu-22.04
-    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-f8ab815
+    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:latest
     strategy:
       fail-fast: false
       matrix:
